# python-sqlite3-qt

./: CHANGELOG.md  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: test_n_pub.yml
src/sqlite3_qt/: __init__.py  dbapi2.py  qt_compat.py
tests/: requirements.txt  test_match.py
